[helper] Fix th_actions from html_helper

--- a/core/app/views/gaku/admin/disposals/_address.html.slim
+++ b/core/app/views/gaku/admin/disposals/_address.html.slim
@@ -8,5 +8,5 @@ tr
   td = address.address1
   td = address.address2
   td
-    = link_to ("<i class='icon-white icon-repeat'></i>").html_safe, [:recovery, address.addressable, address], :class => 'mr-xs btn btn-mini btn-warning recovery-link', :remote => true, :style => 'margin-left:5px'
+    = link_to ("<i class='icon-white icon-repeat'></i>").html_safe, [:recovery, address.addressable, address], :class => 'mr-xs btn btn-mini btn-warning recovery-link', :remote => true
     = ajax_link_to_delete [address.addressable, address] , :id => 'delete-disposal-student-address-link'
