--- a/core/app/views/gaku/admin/disposals/_student.html.slim
+++ b/core/app/views/gaku/admin/disposals/_student.html.slim
@@ -6,6 +6,6 @@ tr
   td = student.birth_date
   td = student.address_widget
   td
-    =link_to_show student
-    = link_to content_tag(:li, nil, :class => 'icon-white icon-repeat'), [:recovery, student], :class => 'mr-xs btn btn-mini btn-warning recovery-link', :remote => true, :style => 'margin-left:5px'
+    = link_to_show student
+    = link_to content_tag(:li, nil, :class => 'icon-white icon-repeat'), [:recovery, student], :class => 'mr-xs btn btn-mini btn-warning recovery-link', :remote => true
     = ajax_link_to_delete student , :id => 'delete-disposal-student-address-link'
