--- a/core/app/views/gaku/shared/_upload_picture.html.slim
+++ b/core/app/views/gaku/shared/_upload_picture.html.slim
@@ -1,4 +1,4 @@
-= form_for @teacher, :url => teacher_path, :html => { :multipart => true } do |form|
+= form_for resource, :html => { :multipart => true } do |form|
   .row-fluid.mt-m
     = form.file_field :picture, :class => "form-file"
   .row-fluid.mt-xs
