--- a/core/app/views/gaku/students/guardians/show.html.slim
+++ b/core/app/views/gaku/students/guardians/show.html.slim
@@ -7,7 +7,7 @@
   = render 'gaku/students/guardians/contacts/contacts'
 
 = well_div do
-  = render 'gaku/students/guardians/addresses/addresses'
+  = render 'gaku/addresses/addresses', :nested_resources => [@student, @guardian]
 
 = well_div do
   = link_to_back @student
