[views] Add address to teachers

--- a/core/app/views/gaku/teachers/show.html.slim
+++ b/core/app/views/gaku/teachers/show.html.slim
@@ -12,6 +12,9 @@
 
 
 = well_div do
+  = render :partial => 'gaku/addresses/addresses', :locals => {:nested_resources => [@teacher]}
+
+= well_div do
   #teacher-notes
     = render :partial => 'gaku/notes/notes'
 
