[delete] cleaning files after refactoring polymorhic contacts

--- a/core/app/views/gaku/addresses/destroy.js.erb
+++ b/core/app/views/gaku/addresses/destroy.js.erb
@@ -1,4 +1,4 @@
-<%- if @addressable.addresses.any? & @address.is_primary? %>
+<%- if @addressable.addresses.any? && @address.is_primary? %>
 	$('#address-<%= @addressable.addresses.first.id%> td a').addClass('btn-primary');
 <% end %>
 
