fix student partial

--- a/core/app/views/gaku/students/_students.html.slim
+++ b/core/app/views/gaku/students/_students.html.slim
@@ -18,5 +18,5 @@
   tbody
     = render :partial => 'gaku/students/student', :collection => @students, :as => 'student'
 
-
-= paginate @students, :remote => true
+- if params[:controller] == "gaku/students"
+  = paginate @students, :remote => true
