[fix] school edit from show

--- a/core/app/views/gaku/admin/schools/show.html.slim
+++ b/core/app/views/gaku/admin/schools/show.html.slim
@@ -4,7 +4,8 @@
 
 = well_div do
   - unless @school.blank?
-    = render 'show_table', :school => @school
+    #school-show-table
+      = render 'show_table', :school => @school
 
 
     = hr
