--- a/core/app/views/gaku/courses/_tabs.html.slim
+++ b/core/app/views/gaku/courses/_tabs.html.slim
@@ -9,7 +9,7 @@
           a#new-course-assignment-tab-link data-toggle="tab" href="#course-assignments"
             = t(:'assignment.plural')
         li
-          a#new-course-exam-link data-toggle="tab" href="#course-exams"
+          a#course-exam-link data-toggle="tab" href="#course-exams"
             = !@course.syllabus.nil? ? print_count(@course.syllabus.exams.count, t('exam.plural')) : t('exam.plural')
       .tab-content
         #course-enrollments.tab-pane.active
