Fix exam_portions show

--- a/core/app/views/gaku/exams/exam_portions/_show_table.html.slim
+++ b/core/app/views/gaku/exams/exam_portions/_show_table.html.slim
@@ -1,6 +1,7 @@
 = table do
   thead
     tr
+      = th t(:'order')
       = th t(:'exam_portion.name')
       = th t(:'exam_portion.max_score')
       = th t(:'exam_portion.weight')
