Put notes and contacts under tabs in student show

--- a/core/app/views/gaku/contacts/create.js.erb
+++ b/core/app/views/gaku/contacts/create.js.erb
@@ -4,6 +4,7 @@ $('#new-<%= @resource_name %>').slideToggle();
 showNotice("<%= render_flash %>");
 
 $('.<%= @resource_name.pluralize %>-count').html("<%= print_count(@count+1, t_contact_list) %>");
+$('#<%= @resource_name.pluralize %>-tab-link').html("<%= print_count(@count+1, t_contact_plural) %>");
 
 
 <% if @contact.is_primary? %>
