--- a/core/app/views/gaku/notes/create.js.erb
+++ b/core/app/views/gaku/notes/create.js.erb
@@ -6,6 +6,6 @@ $('#new-<%= @notable_resource %>-note form').each(function() {
 $('#new-<%= @notable_resource %>-note').slideToggle();
 $('#new-<%= @notable_resource %>-note-link').show();
 
-$('#new-<%= @notable_resource %>-note-tab-link').html("<%= print_count(@notable.notes.count, t('note.plural')) %>");
+$('#<%= @notable_resource %>-notes-tab-link').html("<%= print_count(@notable.notes.count, t('note.plural')) %>");
 $('.<%= @notable_resource %>-notes-count').html("<%= print_count(@notable.notes.count, t('note.list')) %>");
 showNotice("<%= render_flash %>");
