--- a/core/app/views/gaku/shared/_picture.html.slim
+++ b/core/app/views/gaku/shared/_picture.html.slim
@@ -4,7 +4,9 @@
 .row-fluid.mt-s
   .span12.pagination-centered
     = image_tag resource.picture.url(:thumb), :id => "avatar-picture"
-.row-fluid.mt-s
-  = button_to t(:'pictures.change'), 'JavaScript:void(0);', :method => :get, :id => "upload-picture-link", :class => "span12 btn"
-  #upload-picture.hide
-    = render 'gaku/shared/upload_picture', :resource => resource
+
+- if can_edit?
+  .row-fluid.mt-s
+    = button_to t(:'pictures.change'), 'JavaScript:void(0);', :method => :get, :id => "upload-picture-link", :class => "span12 btn"
+    #upload-picture.hide
+      = render 'gaku/shared/upload_picture', :resource => resource
