--- a/core/app/views/gaku/students/_show_table.html.slim
+++ b/core/app/views/gaku/students/_show_table.html.slim
@@ -14,32 +14,17 @@
 
       tr
         th.btn-c2 = t(:'enrollment_status.singular')
-        td.vm
-          #student-enrollment-status
-            = render 'gaku/students/enrollment_statuses/enrollment_status', :student => student
+        td = student.enrollment_status
 
       tr
-        th.btn-c2 = t('scholarship_status')
+        th.btn-c2 = t(:'scholarship_status')
         td = student.scholarship_status
-      tr
-        th.btn-c2 = t('commute_method.singular')
-        td
-          #student-commute-method
-            = render 'gaku/students/commute_methods/commute_method', :student => student
 
       tr
-        th.btn-c2 = t('specialty.singular')
-        td
-          #student-enrollment-status
-            = render 'gaku/students/student_specialties/student_specialties', :student => student
+        th.btn-c2 = t(:'commute_method.singular')
+        td = student.commute_method
+
       tr
-        th.btn-c2 = t('simple_grade.singular')
-        td
-          #student-simple-grade
-            = render 'gaku/students/simple_grades/simple_grades', :student => student
-      tr
-        th.btn-c2 = t('achievement.singular')
-        td
-          #student-achievement
-            = render 'gaku/students/student_achievements/student_achievements', :student => student
+        th.btn-c2 = t(:'specialty.singular')
+        td = student.student_specialties
 
