--- a/core/app/views/gaku/students/course_enrollments/_course_enrollments.html.slim
+++ b/core/app/views/gaku/students/course_enrollments/_course_enrollments.html.slim
@@ -5,7 +5,7 @@
       =count_div 'student-course-enrollments-count' do
         = print_count @student.courses.count, t(:'course.list')
     .pull-right
-      = ajax_link_to_new t(:'course_enrollment.add'), [:new, @student, :course_enrollment], :id => "new-student-course-enrollment-link"
+      = ajax_link_to_new t(:'course_enrollment.add'), [:new, @student, :course_enrollment], :id => "new-student-course-enrollment-link" if can_edit?
   .row-fluid
     hr
   .row-fluid
