WIP: Add phonetic_reading to student show table caption

--- a/core/app/views/gaku/shared/fields/_person_show_table.html.slim
+++ b/core/app/views/gaku/shared/fields/_person_show_table.html.slim
@@ -1,3 +1,4 @@
-tr
-  th = t(:'sex_and_birth')
-  td = gender(person)
+- present person, "Gaku::PersonPresenter".constantize do |presenter|
+  tr
+    th = t(:'sex_and_birth')
+    td = presenter.sex_and_birth
