Change edit_table for user to use show_table and person_caption helper

--- a/core/app/views/gaku/students/_edit_table.html.slim
+++ b/core/app/views/gaku/students/_edit_table.html.slim
@@ -1,5 +1,8 @@
 - present student do |student_presenter|
-  = table_for 'student-index' do
+  = show_table_for 'student-index' do
+
+    = person_caption student
+
     tbody
       tr
         th.btn-c1 width="20%" = t('class')
