--- a/core/app/views/gaku/students/edit.html.slim
+++ b/core/app/views/gaku/students/edit.html.slim
@@ -1,7 +1,7 @@
 - present @student do |student_presenter|
   = content_for :show_header do
     = count_div '' do
-      = t(:'student.show')
+      = t(:'student.edit')
 
 
   = well_div do
