Fix failing specs, clean

--- a/core/app/views/gaku/students/guardians/create.js.erb
+++ b/core/app/views/gaku/students/guardians/create.js.erb
@@ -1,4 +1,4 @@
-$('.guardians_list').append('<%= render_js_partial("guardian", {:guardian => @guardian}) %>');
+$('#student-guardians-index').append('<%= render_js_partial("guardian", {:guardian => @guardian}) %>');
 $('#new-student-guardian').slideToggle();
 $('#new-student-guardian-link').show();
 
