--- a/core/app/views/gaku/students/guardians/show.html.slim
+++ b/core/app/views/gaku/students/guardians/show.html.slim
@@ -1,5 +1,6 @@
 = well_div do
-  = table do
+  = show_table do
+    = person_caption @guardian
     tbody
       = render 'fields', :guardian => @guardian
 
