--- a/core/app/views/gaku/teachers/_show_table.html.slim
+++ b/core/app/views/gaku/teachers/_show_table.html.slim
@@ -1,3 +1,4 @@
 = table_for 'teacher-index' do
+  = person_caption teacher
   tbody
     = render 'gaku/shared/fields/person_show_table', :person => teacher
