--- a/core/app/views/gaku/addresses/new.js.erb
+++ b/core/app/views/gaku/addresses/new.js.erb
@@ -1,3 +1,3 @@
 $('#new-<%= @resource_name %>').html('<%= render_js_partial("form") %>').slideDown();
-$('#new-%<= @resource_name %>-link').hide();
+$('#new-<%= @resource_name %>-link').hide();
 $('.remote-form').enableValidations();
