WIP : Refactor admissions after students refactoring

--- a/admissions/app/views/gaku/admin/admissions/_admission_fields.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_admission_fields.html.slim
@@ -5,6 +5,5 @@ td.registration-date = admission.admission_phase_records.first.created_at.strfti
 td.admission-phase = admission.admission_phase_records.last.admission_phase.name
 td.student-status = admission.student.enrollment_status
 td.manage
-  = link_to_show admin_student_path(admission.student)
-  = ajax_link_to_edit [:edit, :admin, admission.student]
+  = link_to_edit [:edit, :admin, admission.student]
   = render 'gaku/admin/admissions/delete_confirm', :admission => admission
