WIP : Add in place edit

--- a/core/app/views/gaku/students/_edit_table.html.slim
+++ b/core/app/views/gaku/students/_edit_table.html.slim
@@ -13,7 +13,9 @@
 
       tr
         th.btn-c2 = t(:'admitted')
-        td = student.admitted
+        td#admitted
+          a#edit-admitted href="#" data-resource="student" data-name="admitted" data-type="text" data-url="#{student_path(student.id)}" data-original-title="Enter username"
+            = student.admitted
 
       tr
         th.btn-c2 = t(:'enrollment_status.singular')
@@ -46,3 +48,6 @@
           #student-achievement
             = render 'gaku/students/student_achievements/student_achievements', :student => student
 
+
+coffee:
+  $('#edit-admitted').editable()
