Make other student fields in edit into links

--- a/core/app/views/gaku/students/student_achievements/create.js.erb
+++ b/core/app/views/gaku/students/student_achievements/create.js.erb
@@ -1,6 +1,6 @@
 $('#student-achievements-index tbody').append('<%= render_js_partial("student_achievement", {:student_achievement => @student_achievement}) %>');
 $('.student-achievements-count').html('<%= print_count(@count+1, t_achievement_list) %>');
-$('#student-achievements-list').html('<%= escape_javascript(achievements_show(@student.achievements)) %>')
+$('#student-achievements-list a').text('<%= escape_javascript(achievements_show(@student.achievements)) %>')
 
 showNotice("<%= render_flash %>");
 
