--- a/core/app/views/gaku/students/simple_grades/_simple_grades.html.slim
+++ b/core/app/views/gaku/students/simple_grades/_simple_grades.html.slim
@@ -1,3 +1,2 @@
 span#student-simple-grades-list style='margin-right:3px'
-  = simple_grades_show(student.simple_grades)
-= link_to edit_button, [student, :simple_grades], :class=> 'mr-xs btn btn-mini btn-warning' , :id => 'index-student-simple-grades-link', :remote => true
+  = link_to simple_grades_show(@student.simple_grades), [@student, :simple_grades], :id => 'index-student-simple-grades-link', :remote => true
