--- a/core/app/views/gaku/students/student_specialties/create.js.erb
+++ b/core/app/views/gaku/students/student_specialties/create.js.erb
@@ -1,6 +1,6 @@
 $('#student-specialties-index tbody').append('<%= render_js_partial("student_specialty", {:student_specialty => @student_specialty}) %>');
 $('.student-specialties-count').html('<%= print_count(@count+1, t_specialty_list) %>');
-$('#student-specialty-list').html('<%= student_specialties_list(@student.student_specialties) %>')
+$('#student-specialty-list a').text("<%= student_specialties_list(@student.student_specialties) %>");
 
 
 showNotice("<%= render_flash %>");
