--- a/core/app/views/gaku/students/student_specialties/update.js.erb
+++ b/core/app/views/gaku/students/student_specialties/update.js.erb
@@ -1,4 +1,4 @@
 $('#index-student-specialties-modal .modal-body .row-fluid .span12.well').html("<%= render_js_partial('index', {:student_specialties => @student_specialties}) %>");
-$('#student-specialty-list').html('<%= student_specialties_list(@student.student_specialties) %>')
+$('#student-specialty-list a').text("<%= student_specialties_list(@student.student_specialties) %>");
 
 showNotice("<%= render_flash %>");
