--- a/core/app/views/gaku/students/_show_table.html.slim
+++ b/core/app/views/gaku/students/_show_table.html.slim
@@ -34,7 +34,7 @@
 
       tr
         th = t(:'commute_method.singular')
-        td = student.commute_method
+        td = student.commute_method_type
 
       tr
         th = t(:'specialty.plural')
