--- a/core/app/views/gaku/students/_edit_table.html.slim
+++ b/core/app/views/gaku/students/_edit_table.html.slim
@@ -23,39 +23,37 @@
             = student.enrollment_status
 
       tr
-        th.btn-c2 = t('scholarship_status')
+        th.btn-c2 = t(:'scholarship_status')
         td
           a#edit-scholarship-status.editable href="#" data-resource="student" data-name="scholarship_status_id" data-type="select" data-url="#{student_path(student.id)}"
             = student.scholarship_status
       tr
-        th.btn-c2 = t('commute_method.singular')
+        th.btn-c2 = t(:'commute_method.singular')
         td
-          a#commute_method.editable href="#" data-resource="student" data-name="commute_method_type_id" data-type="select" data-url="#{student_path(student.id)}"
-            = student.commute_method
-          #student-commute-method
-            /= render 'gaku/students/commute_methods/commute_method', :student => student
+          a#commute-method-type.editable href="#" data-resource="student" data-name="commute_method_type_id" data-type="select" data-url="#{student_path(student.id)}"
+            = student.commute_method_type
 
       tr
-        th.btn-c2 = t('specialty.singular')
+        th.btn-c2 = t(:'specialty.singular')
         td
           #student-enrollment-status
             = render 'gaku/students/student_specialties/student_specialties', :student => student
       tr
-        th.btn-c2 = t('simple_grade.singular')
+        th.btn-c2 = t(:'simple_grade.singular')
         td
           #student-simple-grade
             = render 'gaku/students/simple_grades/simple_grades', :student => student
       tr
-        th.btn-c2 = t('achievement.singular')
+        th.btn-c2 = t(:'achievement.singular')
         td
           #student-achievement
             = render 'gaku/students/student_achievements/student_achievements', :student => student
 
 javascript:
-  var commutes= #{ @commutes.to_json.html_safe }
   var enrollment_types = #{ @enrollments.to_json.html_safe }
   var scholarship_statuses = #{ @sch.to_json.html_safe }
-  $('#commute_method').inline_select(commutes);
+
+  $('#commute-method-type').inline_select(#{ commute_method_types_inline });
   $('#edit-enrollment-status').inline_select(enrollment_types);
   $('#edit-scholarship-status').inline_select(scholarship_statuses);
   $('#birth_date').inline_date();
